# FabulaUltima_Equipment

./: CMakeLists.txt  README.md  main.cpp
assets/: config.json
src/: global.h  log.cpp  log.h
src/editor/: FUwindow.cpp  FUwindow.h  FUwindow_glfw.cpp  FUwindow_glfw.h
src/equipment/: Equipment.h  JSONHandler.h
test/: CMakeLists.txt
test/test1/: a.json  test1.cpp
test/test2/: config.json  test2.cpp
test/test3/: config.json  test3.cpp
